@@ -23,8 +23,7 @@ unset archives archive_dirs builddir cc cflags check config cxx cxxflags deps
 unset dependencies directory failures homepage install_as_root install_log_rc
 unset lc_all ldflags leavefiles linguas logdir logfile log_install log_target
 unset name name_ver optimize package package_builddir patches patch_cmds profile
-unset profiles profiles_cwd srcdir stage terminal_output timestamp version
-unset version_table
+unset profiles_cwd srcdir stage terminal_output timestamp version
 unset ${!stage0*} ${!stage1*}
 
 # Location of configuration file.  Scripts may redefine this value in response
@@ -204,7 +203,7 @@ function logged_failure {
 	warning "full command line follows"
 	warning "$*"
 
-	# If terinal output is disabled & the log file is readable (& not
+	# If terminal output is disabled & the log file is readable (& not
 	# /dev/null!), output its tail.
 	if [[ "$terminal_output" == no && -f "$logfile" && -r "$logfile" ]]
 	then
@@ -302,22 +301,17 @@ function source_config {
 
 	source_file "$config" "prometheus configuration file"
 
-# This is probably not needed any more
-#	# Check essential variables.
-#	[[ -z "$backupdir" ]] && error "backupdir not set in \`$config'"
-#	[[ -z "$builddir" ]] && error "builddir not set in \`$config'"
-#	[[ -z "$install_log_rc" ]] &&
-#		error "install_log_rc not set in \`$config'"
-#	[[ -z "$profiles" ]] && error "profiles not set in \`$config'"
-#	[[ -z "$srcdir" ]] && error "srcdir not set in \`$config'"
-#
-#	# Set some useful variables.
-#	logdir=$(sed -n 's/^LOGDIR=//p' "$install_log_rc")
-#	[[ -z "$logdir" ]] &&
-#	error "could not extract log directory from \`$install_log_rc'"
-#
-#	timestamp="$logdir/.timestamp"
-#	version_table="$logdir/.vtab"
+	# Check essential variables.
+	[[ -z "$install_log_rc" ]] &&
+		error "install_log_rc not set in \`$config'"
+
+	# Set some useful variables.
+	srcdir=~prometheus/sources	# workaround for `location_of'
+	logdir=$(sed -n 's/^LOGDIR=//p' "$install_log_rc")
+	[[ -z "$logdir" ]] &&
+	error "could not extract log directory from \`$install_log_rc'"
+
+	timestamp="$logdir/.timestamp"
 }
 
 # ----------------------------- PROFILE HANDLING ----------------------------- #
@@ -337,12 +331,12 @@ function source_profile {
 	package="$2"
 
 	case "$1" in
-		(pool)	profile="~prometheus/profiles/${package}" ;;
-		(inst)	profile="~prometheus/installed/profiles/${package}" ;;
+		(pool)	profile=~prometheus/profiles/"${package}" ;;
+		(inst)	profile=~prometheus/installed/profiles/"${package}" ;;
 		(fallback)
-			[[ -f "~prometheus/installed/profiles/${pacakge}" ]] &&
-			profile="~prometheus/installed/profiles/${package}" ||
-			profile="~prometheus/profiles/${package}" ;;
+			[[ -f ~prometheus/installed/profiles/"${pacakge}" ]] &&
+			profile=~prometheus/installed/profiles/"${package}" ||
+			profile=~prometheus/profiles/"${package}" ;;
 		(*)	usage_error "source_profile" "<mode>" "<package>" "$*" ;;
 	esac
 
@@ -487,7 +481,7 @@ function set_directory {
 
 	# Set package's build directory.  ${archive_dirs[0]} overrides
 	# $builddir if set to a non-null value.
-	package_builddir="${archive_dirs[0]:-$builddir}/$package"
+	package_builddir="${archive_dirs[0]:-~prometheus/build}/$package"
 
 	# Make $directory absolute.
 	directory="$package_builddir/$directory"
